# Personal-Guru

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  app.py  config.py  docker-compose.windows.yml  docker-compose.yml  migrate_data.py  pydoc-markdown.yml  pyproject.toml  pytest.ini  requirements-local.txt  requirements.txt  run.py  schema.dbml  setup.bat  setup.sh  start_docker.bat  start_docker.sh  stop_docker.sh  syntax_check.txt  test_print.py  test_result.txt  verify_output.txt  verify_output_2.txt  verify_output_3.txt  verify_output_4.txt  verify_output_5.txt
.agent/: agent.md
.github/: pull_request_template.md
app/: __init__.py  models.py  routes.py  setup_app.py
certs/: cert.pem  key.pem
coqui_tts/: Dockerfile  start.sh
docs/: architecture.md  deployment.md  pydoc-markdown.yml  quickstart.md
installation/: setup.bat
migrations/: env.py
requirements/: base.txt  dev.txt
resources/: architecture.html
scripts/: clear_database.py  create_tables.py  db_viewer.py  export_docs.sh  generate_cert.py  generate_db.py  generate_dbml.py  generate_docs.sh  migrate_data.py  test_logging.py  update_database.py  visualize_db.py
src/: agents.py  embed_test.py  embed_validator.py  storage.py  youtube_search.py
static/: flashcards.css  reel_style.css  style.css
templates/: background.html  base.html  complete.html  feedback.html  flashcard_export_template.html  flashcard_mode.html  html_export_template.html  index.html  learn_step.html  pdf_export_template.html  quiz_feedback.html  quiz_mode.html  quiz_result_pdf.html  quiz_select.html  (+2 more)
(+150 files in other folders)
